# 2016-Robot-Rewrite

./: 2016-Robot-Rewrite.ipr  2016-Robot-Rewrite.iws  CMakeLists.txt  README.md  build.gradle
CompetitionRobot/: .gitignore  GradleRIO.ipr  GradleRIO.iws  build.gradle
CompetitionRobot/libs/strongback/: strongback.properties
CompetitionRobot/libs/strongback/java/javadoc/: allclasses-noframe.html  constant-values.html  deprecated-list.html  overview-frame.html  overview-tree.html
CompetitionRobot/libs/strongback/java/javadoc/org/strongback/: DataRecordable.html  DataRecorder.html  (+9 more)
GradleRIO/: GradleRIO.ipr  build.gradle
Quetzalcoatl/: .gitignore  Quetzalcoatl.ipr  Quetzalcoatl.iws  build.gradle
Quetzalcoatl/gradle/wrapper/: gradle-wrapper.properties
Quetzalcoatl/libs/strongback/java/javadoc/: allclasses-frame.html  help-doc.html  index-all.html  index.html  overview-summary.html  package-list  serialized-form.html
Vision/processing/: MathData.hpp  MathFunctions.cpp  MathFunctions.hpp  ThreadManager.cpp  ThreadManager.hpp  main.cpp
Vision/processing/camera/: CameraSettings.cpp  CameraSettings.hpp  SetCamera.cpp  SetCamera.hpp  config.txt
Vision/processing/cmake_modules/: FindBoost.txt
Vision/processing/dataLogging/: Log.cpp  Log.hpp
Vision/processing/imgProc/: CreateShapes.cpp  CreateShapes.hpp  VisionProcessing.cpp  VisionProcessing.hpp
Vision/processing/networking/: DataSender.cpp  DataSender.hpp  FrameSender.cpp  FrameSender.hpp
gradle/wrapper/: gradle-wrapper.properties
src/main/java/org/team401/robot/: Robot.java
vision/: main.cpp
(+273 files in other folders)
